# xwp_rotation

./: .gitignore  README.md  basic_rotation.ipynb  install.sh  pyproject.toml  setup.py
tests/basic/: basic_rotate.ipynb  rot_matrix.ipynb
tests/phantom/: X.h5  Y.h5  a.out  appctx.h  compare_one_slice.ipynb  compare_phantom.ipynb  ex_full_object.c  ex_mat_vec.c  ex_matvec  ex_matvec.c  ex_matvec.d  ex_one_slice.c  ex_rot.c  ex_rotate.c  ex_test.c  ex_utils.c  ex_utils.d  makefile  numpy_3d_phantom.ipynb  sanity.c  save_rot_petsc_bin.ipynb
xwp_rotation/: __init__.py  conv_dict.py  rotate.py  utils.py
