[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "xwp_rotation"
author = "Sajid Ali"
author-email = "sajidsyed2021@u.northwestern.edu"
home-page = "https://github.com/s-sajid-ali/xwp_rotation"

requires = [
	"numpy",
        "matplotlib",
	"pyvips"
	]

requires-python=">=3.5"
